crates/reze_compiler/tests/snapshots/snapshots__hydrate__dead_branches.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const DEBUG = false;\nconst a = <div>{false && <b>never</b>}{true ? <i>y</i> : <u>n</u>}{DEBUG && <p />}</div>;"
---
import { template as _$template, claim as _$claim, claimInsert as _$claimInsert } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<div><i>y</i></div>"),
  _tmpl$2 = /*#__PURE__*/ _$template("<p></p>");
const DEBUG = false;
const a = (() => {
  var _el$ = _$claim(_tmpl$, "div");
  _$claimInsert(_el$, DEBUG && _$claim(_tmpl$2, "p"), null);
  return _el$;
})();
// info
[DEAD_BRANCH_REMOVED] The condition is a literal, so this branch can never render; it was removed.
  in div
  at case.tsx:2:17
  1 | const DEBUG = false;
> 2 | const a = <div>{false && <b>never</b>}{true ? <i>y</i> : <u>n</u>}{DEBUG && <p />}</div>;
    |                 ^^^^^^^^^^^^^^^^^^^^^
  note: never rendered (case.tsx:2:26)
// info
[DEAD_BRANCH_REMOVED] The condition is a literal, so this branch can never render; it was removed.
  in div
  at case.tsx:2:40
  1 | const DEBUG = false;
> 2 | const a = <div>{false && <b>never</b>}{true ? <i>y</i> : <u>n</u>}{DEBUG && <p />}</div>;
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
  note: never rendered (case.tsx:2:58)
