crates/reze_compiler/tests/snapshots/snapshots__hydrate__events.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <div onClick={() => go()} onInput={[pick, 1]} onKeyDown={handler} on:scroll={s} onDoubleClick={d} onclick=\"legacy()\" />;"
---
import { template as _$template, claim as _$claim, addEventListener as _$addEventListener, delegateEvents as _$delegateEvents } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<div onclick=\"legacy()\"></div>");
const a = (() => {
  var _el$ = _$claim(_tmpl$, "div");
  _el$.$$click = () => go();
  _el$.$$input = pick;
  _el$.$$inputData = 1;
  _$addEventListener(_el$, "keydown", handler, true);
  _$addEventListener(_el$, "scroll", s);
  _$addEventListener(_el$, "dblclick", d);
  return _el$;
})();
_$delegateEvents(["click", "input", "keydown"]);
