crates/reze_compiler/tests/snapshots/snapshots__hydrate__merged_binds.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <input value={v()} checked={c()} style={{ color: color() }} class={cls()} />;"
---
import { template as _$template, claim as _$claim, bind as _$bind, style as _$style, className as _$className } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<input>");
const a = (() => {
  var _el$ = _$claim(_tmpl$, "input");
  _$bind(_p$ => {
    var _v$ = v(),
      _v$2 = c(),
      _v$3 = { color: color() },
      _v$4 = cls();
    _v$ !== _p$[0] && (_el$.value = _p$[0] = _v$);
    _v$2 !== _p$[1] && (_el$.checked = _p$[1] = _v$2);
    _v$3 !== _p$[2] && (_p$[2] = _$style(_el$, _v$3, _p$[2]));
    _v$4 !== _p$[3] && (_$className(_el$, _p$[3] = _v$4));
    return _p$;
  }, []);
  return _el$;
})();
